--- a/knn.ipynb
+++ b/knn.ipynb
@@ -24,7 +24,6 @@
     }
    ],
    "source": [
-    "from sklearn.datasets import load_digits\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -32,27 +31,7 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "# Function to load and convert image to pixel data\n",
-    "def image_to_pixels(image_path):\n",
-    "    img = Image.open(image_path)\n",
-    "    img = img.convert('RGB')  # Ensure the image is in RGB mode\n",
-    "    img_array = np.array(img)  # Convert image to NumPy array\n",
-    "    img_array_flattened = img_array.flatten()  # Flatten the array\n",
-    "    return img_array_flattened.tolist()  # Convert flattened array to a list\n",
-    "\n",
-    "\n",
-    "def listImgDir(directory, imagesLimit = False):\n",
-    "    imagesPath = []\n",
-    "    if(imagesLimit) :\n",
-    "        filenames = os.listdir(directory)[:imagesLimit]\n",
-    "    else :\n",
-    "        filenames = os.listdir(directory)\n",
-    "    for filename in filenames:\n",
-    "        if filename.endswith('.jpg'): # Adjust file extensions as needed\n",
-    "             imagesPath.append(os.path.join(directory, filename))    \n",
-    "    return imagesPath    \n",
+    "from helper import listImgDir, image_to_pixels  \n",
     "\n",
     "def get_image_size(image_path):\n",
     "    with Image.open(image_path) as img:\n",
